# loot-table

./: Cargo.toml  makefile  readme.md
src/: main.rs
